Drop support for Java 7 :wave: